[metadata]
name = pytest_netdut
url=https://github.com/aristanetworks/pytest-netdut

description = "Automated software testing for switches using pytest"
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown

author = "David Snowdon"
author_email = "daves@arista.com"

maintainer = "Alex Webster"
maintainer_email = "alexw@arista.com"

license = "BSD 3-Clause License"
license_files = file: LICENSE

keywords = pytest, eos

classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing

project_urls =
    Source = https://github.com/aristanetworks/pytest-netdut/
    Tracker = https://github.com/aristanetworks/pytest-netdut/issues
    Documentation = https://github.com/aristanetworks/pytest-netdut/

[options]
packages = find:

package_dir=
    =src

install_requires =
    pexpect >= 4.8.0
    pyeapi>=0.8.4
    pytest>=3.5.0,<7.3
    six>=1.15
    packaging>=22.0

[options.packages.find]
where=src

[options.package_data]
* = README.md